--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
     <title>Formulário com validações</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Formulário com Validação</h1>
-    <form>
+    <h1 class="roboto-bold">Formulário com Validação</h1>
+    <form class="roboto-thin container">
         <div class="form-control">
-            <label for="nome">Nome</label>
+            <label for="nome" class="roboto-black">Nome</label>
             <input type="text" id="nome" name="nome">
             <div class="error-message"></div>
         </div>
         <div class="form-control">
-            <label for="email">E-mail</label>
+            <label for="email" class="roboto-black">E-mail</label>
             <input type="email" id="email" name="email">
             <div class="error-message"></div>
         </div>
         <div class="form-control">
-            <label for="assunto">Assunto</label>
+            <label for="assunto" class="roboto-black">Assunto</label>
             <input type="assunto" id="assunto" name="assunto">
             <div class="error-message"></div>
         </div>
         <div class="form-control">
-            <label for="mensagem">Mensagem</label>
+            <label for="mensagem" class="roboto-black">Mensagem</label>
             <textarea type="text" id="mensagem" name="mensagem">
-
             </textarea>
+            <div class="error-message"></div>
+        </div>
+        <div class="form-control">
+            <input type="submit" class="roboto-black botao" text="Enviar">
             <div class="error-message"></div>
         </div>
     </form>
