--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário com validações</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1 class="roboto-bold">Formulário com Validação</h1>
-    <form class="roboto-thin container">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulário com Validação</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Formulário de Contato</h1>
+      <form>
         <div class="form-control">
-            <label for="nome" class="roboto-black">Nome</label>
-            <input type="text" id="nome" name="nome">
-            <div class="error-message"></div>
+          <label for="nome">Nome</label>
+          <input type="text" id="nome" name="nome" />
+          <div class="error-message"></div>
         </div>
+
         <div class="form-control">
-            <label for="email" class="roboto-black">E-mail</label>
-            <input type="email" id="email" name="email">
-            <div class="error-message"></div>
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" />
+          <div class="error-message"></div>
         </div>
+
         <div class="form-control">
-            <label for="assunto" class="roboto-black">Assunto</label>
-            <input type="assunto" id="assunto" name="assunto">
-            <div class="error-message"></div>
+          <label for="assunto">Assunto</label>
+          <input type="text" id="assunto" name="assunto" />
+          <div class="error-message"></div>
         </div>
+
         <div class="form-control">
-            <label for="mensagem" class="roboto-black">Mensagem</label>
-            <textarea type="text" id="mensagem" name="mensagem">
-            </textarea>
-            <div class="error-message"></div>
+          <label for="mensagem">Mensagem</label>
+          <textarea id="mensagem" name="mensagem"></textarea>
+          <div class="error-message"></div>
         </div>
-        <div class="form-control">
-            <input type="submit" class="roboto-black botao" text="Enviar">
-            <div class="error-message"></div>
-        </div>
-    </form>
-    
-</body>
+
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
+  </body>
 </html>
